# EUV_Ion_Source_Simulation

./: .gitignore  .markdownlint.jsonc  .vale.ini  =2.0  AGENTS.md  CHANGELOG.md  Makefile  ONGOING.md  PR_DESCRIPTION.md  PR_TEST_FIXES.md  README.md  STUDY_PHYSICS_ACTIVATION_PLAN.md  bootstrap.sh  debug_studies_creation.py  debug_studymanager.py  debug_studymanager_minimal.py  pyproject.toml  pytest.ini  requirements.txt  test_complete_simulation.py  test_studies_full.py
.githooks/: pre-push
.github/: CODEOWNERS
EVAPORATION_PHYSICS_REFERENCE/: droplet_evaporation.java  droplet_evaporation.pdf:Zone.Identifier  droplet_evaporation.pptx:Zone.Identifier
KUMAR-2D/: Andrade_parameters_for_Sn.txt  Constraints.txt  IMPLEMENTATION_SUMMARY.md  Kumar_2D_demo_v5.java  Mesh_Velocity_Variables.txt  NEXT_STEPS.md  README.md  Weak_Expressions.txt  dg_variables.txt  dg_weak_expressions.txt  global_parameters_v8.txt  kumar2d_geom.py  kumar_2d_mph.py  laser_parameters.txt  parameters.txt  run_kumar_mph.py
data/: MoltenSn_DL_TwoStage_CO2exact_NEARIRdense_nkR_0p9_11um_10kpts.xlsx  Ppp_analytic_expression.txt  config.yaml  global_parameters_pp_v2.txt  laser_parameters_pp_v2.txt
docs/: advanced_cli.md  data_formats.md  kumar_mapping.md  models.md  mph_implementation_summary.md  mph_migration_plan.md  mph_next_steps.md  params.md  practice.md  troubleshooting.md  workflow_fresnel.md
scripts/: setup_comsol_env.sh  sweep_demo.py
src/: __init__.py  global_parameters_pp_v2.txt  laser_parameters_pp_v2.txt  mph_cli.py  pp_model.py  pp_sizyuk.py
tests/: conftest.py  test_adapter_mph.py  (+32 more)
(+75 files in other folders)
